src/parser.js
Ingreedy = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = null,
        peg$c3 = /^[\n]/,
        peg$c4 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c5 = function(amount, container, unit, ingredient) {
            var result = {
              amount: amount,
              container: container,
              ingredient: ingredient,
              unit: unit
            };

            for(var i in result) {
              if(result[i] === null || result[i] === undefined) {
                delete result[i];
              }
            }

            return result;
          },
        peg$c6 = function(amount, unit) {
            return { amount: amount, unit: unit };
          },
        peg$c7 = "(",
        peg$c8 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c9 = "{",
        peg$c10 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c11 = "[",
        peg$c12 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c13 = "<",
        peg$c14 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c15 = ")",
        peg$c16 = { type: "literal", value: ")", description: "\")\"" },
        peg$c17 = "}",
        peg$c18 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c19 = "]",
        peg$c20 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c21 = ">",
        peg$c22 = { type: "literal", value: ">", description: "\">\"" },
        peg$c23 = " ",
        peg$c24 = { type: "literal", value: " ", description: "\" \"" },
        peg$c25 = /^[\t]/,
        peg$c26 = { type: "class", value: "[\\t]", description: "[\\t]" },
        peg$c27 = { type: "any", description: "any character" },
        peg$c28 = /^[,]/,
        peg$c29 = { type: "class", value: "[,]", description: "[,]" },
        peg$c30 = function(letters) { return letters.join(''); },
        peg$c31 = /^[0-9.]/,
        peg$c32 = { type: "class", value: "[0-9.]", description: "[0-9.]" },
        peg$c33 = function(digits) { return parseFloat( digits.join("") ) },
        peg$c34 = function(left, right) { return left + right; },
        peg$c35 = /^[\/]/,
        peg$c36 = { type: "class", value: "[\\/]", description: "[\\/]" },
        peg$c37 = function(left, right) { return left / right; },
        peg$c38 = /^[0-9]/,
        peg$c39 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c40 = function(digits) { return parseInt( digits.join(""), 10 ); },
        peg$c41 = /^[a-zA-Z]/,
        peg$c42 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c43 = void 0,
        peg$c44 = "cups",
        peg$c45 = { type: "literal", value: "cups", description: "\"cups\"" },
        peg$c46 = "cup",
        peg$c47 = { type: "literal", value: "cup", description: "\"cup\"" },
        peg$c48 = "c.",
        peg$c49 = { type: "literal", value: "c.", description: "\"c.\"" },
        peg$c50 = "c",
        peg$c51 = { type: "literal", value: "c", description: "\"c\"" },
        peg$c52 = "fluid",
        peg$c53 = { type: "literal", value: "fluid", description: "\"fluid\"" },
        peg$c54 = "fl",
        peg$c55 = { type: "literal", value: "fl", description: "\"fl\"" },
        peg$c56 = ".",
        peg$c57 = { type: "literal", value: ".", description: "\".\"" },
        peg$c58 = "gallons",
        peg$c59 = { type: "literal", value: "gallons", description: "\"gallons\"" },
        peg$c60 = "gallon",
        peg$c61 = { type: "literal", value: "gallon", description: "\"gallon\"" },
        peg$c62 = "gal.",
        peg$c63 = { type: "literal", value: "gal.", description: "\"gal.\"" },
        peg$c64 = "gal",
        peg$c65 = { type: "literal", value: "gal", description: "\"gal\"" },
        peg$c66 = "ounces",
        peg$c67 = { type: "literal", value: "ounces", description: "\"ounces\"" },
        peg$c68 = "ounce",
        peg$c69 = { type: "literal", value: "ounce", description: "\"ounce\"" },
        peg$c70 = "oz.",
        peg$c71 = { type: "literal", value: "oz.", description: "\"oz.\"" },
        peg$c72 = "oz",
        peg$c73 = { type: "literal", value: "oz", description: "\"oz\"" },
        peg$c74 = "pints",
        peg$c75 = { type: "literal", value: "pints", description: "\"pints\"" },
        peg$c76 = "pint",
        peg$c77 = { type: "literal", value: "pint", description: "\"pint\"" },
        peg$c78 = "pt.",
        peg$c79 = { type: "literal", value: "pt.", description: "\"pt.\"" },
        peg$c80 = "pt",
        peg$c81 = { type: "literal", value: "pt", description: "\"pt\"" },
        peg$c82 = "pounds",
        peg$c83 = { type: "literal", value: "pounds", description: "\"pounds\"" },
        peg$c84 = "pound",
        peg$c85 = { type: "literal", value: "pound", description: "\"pound\"" },
        peg$c86 = "lbs.",
        peg$c87 = { type: "literal", value: "lbs.", description: "\"lbs.\"" },
        peg$c88 = "lbs",
        peg$c89 = { type: "literal", value: "lbs", description: "\"lbs\"" },
        peg$c90 = "lb.",
        peg$c91 = { type: "literal", value: "lb.", description: "\"lb.\"" },
        peg$c92 = "lb",
        peg$c93 = { type: "literal", value: "lb", description: "\"lb\"" },
        peg$c94 = "quarts",
        peg$c95 = { type: "literal", value: "quarts", description: "\"quarts\"" },
        peg$c96 = "quart",
        peg$c97 = { type: "literal", value: "quart", description: "\"quart\"" },
        peg$c98 = "qts.",
        peg$c99 = { type: "literal", value: "qts.", description: "\"qts.\"" },
        peg$c100 = "qts",
        peg$c101 = { type: "literal", value: "qts", description: "\"qts\"" },
        peg$c102 = "qt.",
        peg$c103 = { type: "literal", value: "qt.", description: "\"qt.\"" },
        peg$c104 = "qt",
        peg$c105 = { type: "literal", value: "qt", description: "\"qt\"" },
        peg$c106 = "tablespoons",
        peg$c107 = { type: "literal", value: "tablespoons", description: "\"tablespoons\"" },
        peg$c108 = "tablespoon",
        peg$c109 = { type: "literal", value: "tablespoon", description: "\"tablespoon\"" },
        peg$c110 = "tbsp.",
        peg$c111 = { type: "literal", value: "tbsp.", description: "\"tbsp.\"" },
        peg$c112 = "tbsp",
        peg$c113 = { type: "literal", value: "tbsp", description: "\"tbsp\"" },
        peg$c114 = "tbs.",
        peg$c115 = { type: "literal", value: "tbs.", description: "\"tbs.\"" },
        peg$c116 = "tbs",
        peg$c117 = { type: "literal", value: "tbs", description: "\"tbs\"" },
        peg$c118 = "T.",
        peg$c119 = { type: "literal", value: "T.", description: "\"T.\"" },
        peg$c120 = "T",
        peg$c121 = { type: "literal", value: "T", description: "\"T\"" },
        peg$c122 = "teaspoons",
        peg$c123 = { type: "literal", value: "teaspoons", description: "\"teaspoons\"" },
        peg$c124 = "teaspoon",
        peg$c125 = { type: "literal", value: "teaspoon", description: "\"teaspoon\"" },
        peg$c126 = "tsp.",
        peg$c127 = { type: "literal", value: "tsp.", description: "\"tsp.\"" },
        peg$c128 = "tsp",
        peg$c129 = { type: "literal", value: "tsp", description: "\"tsp\"" },
        peg$c130 = "t.",
        peg$c131 = { type: "literal", value: "t.", description: "\"t.\"" },
        peg$c132 = "t",
        peg$c133 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c134 = "grams",
        peg$c135 = { type: "literal", value: "grams", description: "\"grams\"" },
        peg$c136 = "gram",
        peg$c137 = { type: "literal", value: "gram", description: "\"gram\"" },
        peg$c138 = "gr.",
        peg$c139 = { type: "literal", value: "gr.", description: "\"gr.\"" },
        peg$c140 = "gr",
        peg$c141 = { type: "literal", value: "gr", description: "\"gr\"" },
        peg$c142 = "g.",
        peg$c143 = { type: "literal", value: "g.", description: "\"g.\"" },
        peg$c144 = "g",
        peg$c145 = { type: "literal", value: "g", description: "\"g\"" },
        peg$c146 = "kilograms",
        peg$c147 = { type: "literal", value: "kilograms", description: "\"kilograms\"" },
        peg$c148 = "kilogram",
        peg$c149 = { type: "literal", value: "kilogram", description: "\"kilogram\"" },
        peg$c150 = "kg.",
        peg$c151 = { type: "literal", value: "kg.", description: "\"kg.\"" },
        peg$c152 = "kg",
        peg$c153 = { type: "literal", value: "kg", description: "\"kg\"" },
        peg$c154 = "liters",
        peg$c155 = { type: "literal", value: "liters", description: "\"liters\"" },
        peg$c156 = "liter",
        peg$c157 = { type: "literal", value: "liter", description: "\"liter\"" },
        peg$c158 = "l.",
        peg$c159 = { type: "literal", value: "l.", description: "\"l.\"" },
        peg$c160 = "l",
        peg$c161 = { type: "literal", value: "l", description: "\"l\"" },
        peg$c162 = "milligrams",
        peg$c163 = { type: "literal", value: "milligrams", description: "\"milligrams\"" },
        peg$c164 = "milligram",
        peg$c165 = { type: "literal", value: "milligram", description: "\"milligram\"" },
        peg$c166 = "mg.",
        peg$c167 = { type: "literal", value: "mg.", description: "\"mg.\"" },
        peg$c168 = "mg",
        peg$c169 = { type: "literal", value: "mg", description: "\"mg\"" },
        peg$c170 = "milliliters",
        peg$c171 = { type: "literal", value: "milliliters", description: "\"milliliters\"" },
        peg$c172 = "milliliter",
        peg$c173 = { type: "literal", value: "milliliter", description: "\"milliliter\"" },
        peg$c174 = "ml.",
        peg$c175 = { type: "literal", value: "ml.", description: "\"ml.\"" },
        peg$c176 = "ml",
        peg$c177 = { type: "literal", value: "ml", description: "\"ml\"" },
        peg$c178 = "dashes",
        peg$c179 = { type: "literal", value: "dashes", description: "\"dashes\"" },
        peg$c180 = "dash",
        peg$c181 = { type: "literal", value: "dash", description: "\"dash\"" },
        peg$c182 = "handfuls",
        peg$c183 = { type: "literal", value: "handfuls", description: "\"handfuls\"" },
        peg$c184 = "handful",
        peg$c185 = { type: "literal", value: "handful", description: "\"handful\"" },
        peg$c186 = "pinches",
        peg$c187 = { type: "literal", value: "pinches", description: "\"pinches\"" },
        peg$c188 = "pinch",
        peg$c189 = { type: "literal", value: "pinch", description: "\"pinch\"" },
        peg$c190 = "touches",
        peg$c191 = { type: "literal", value: "touches", description: "\"touches\"" },
        peg$c192 = "touch",
        peg$c193 = { type: "literal", value: "touch", description: "\"touch\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseingredient_addition();

      return s0;
    }

    function peg$parseingredient_additions() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseingredient_addition();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseingredient_addition();
        }
      } else {
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseingredient_addition() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseamount();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$c1;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecontainer();
          if (s3 === peg$FAILED) {
            s3 = peg$c2;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseunit();
            if (s4 === peg$FAILED) {
              s4 = peg$c2;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsews();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parsews();
                }
              } else {
                s5 = peg$c1;
              }
              if (s5 === peg$FAILED) {
                s5 = peg$c2;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsephrase();
                if (s6 === peg$FAILED) {
                  s6 = peg$c2;
                }
                if (s6 !== peg$FAILED) {
                  if (peg$c3.test(input.charAt(peg$currPos))) {
                    s7 = input.charAt(peg$currPos);
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c4); }
                  }
                  if (s7 === peg$FAILED) {
                    s7 = peg$c2;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c5(s1, s3, s4, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseamount() {
      var s0;

      s0 = peg$parsefraction();
      if (s0 === peg$FAILED) {
        s0 = peg$parsemixed_number();
        if (s0 === peg$FAILED) {
          s0 = peg$parsefloat();
          if (s0 === peg$FAILED) {
            s0 = peg$parseinteger();
          }
        }
      }

      return s0;
    }

    function peg$parsecontainer() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parsecontainer_wrapper_start();
      if (s1 === peg$FAILED) {
        s1 = peg$c2;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$c1;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseamount();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsews();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsews();
              }
            } else {
              s4 = peg$c1;
            }
            if (s4 === peg$FAILED) {
              s4 = peg$c2;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseunit();
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parsews();
                if (s7 !== peg$FAILED) {
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parsews();
                  }
                } else {
                  s6 = peg$c1;
                }
                if (s6 === peg$FAILED) {
                  s6 = peg$c2;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsecontainer_wrapper_end();
                  if (s7 === peg$FAILED) {
                    s7 = peg$c2;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c6(s3, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsecontainer_wrapper_start() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 40) {
        s0 = peg$c7;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 123) {
          s0 = peg$c9;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 91) {
            s0 = peg$c11;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 60) {
              s0 = peg$c13;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c14); }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecontainer_wrapper_end() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 41) {
        s0 = peg$c15;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 125) {
          s0 = peg$c17;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 93) {
            s0 = peg$c19;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s0 = peg$c21;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsews() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c23;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c25.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c26); }
        }
      }

      return s0;
    }

    function peg$parsespace() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c23;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }

      return s0;
    }

    function peg$parsephrase() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (input.length > peg$currPos) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c27); }
        }
      }
      if (s1 !== peg$FAILED) {
        s1 = input.substring(s0, peg$currPos);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsepunctuation() {
      var s0;

      if (peg$c28.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c29); }
      }

      return s0;
    }

    function peg$parseword() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseletter();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseletter();
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c30(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsefloat() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c31.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c32); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c31.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c32); }
          }
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c33(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsemixed_number() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseinteger();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsespace();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsefraction();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c34(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsefraction() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseinteger();
      if (s1 !== peg$FAILED) {
        if (peg$c35.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c36); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseinteger();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c37(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseinteger() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c38.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c39); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c38.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c39); }
          }
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c40(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseletter() {
      var s0;

      if (peg$c41.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c42); }
      }

      return s0;
    }

    function peg$parseunit() {
      var s0, s1, s2, s3, s4;
